fixed contact form alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ html,body
 #contact-section {
   margin-top: 5%;
   margin-bottom: 5%;
-  padding: 2.5% 5%;
+  padding: 5% 5%;
 }
 
 #contact-form {
